Ingress/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    #cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts: 
    - wordpress.jyeclc.com
    secretName: tls-secret
  ingressClassName: nginx
  rules:
  - host: wordpress.jyeclc.com
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: wordpress-external
            port:
              number: 80
